css/style.css
/* ... */
#overlay-estimaciones0624 .overlay-content {
    top: 60px;
    width: 308px;
    background-color: #054a3dfa;
    font-size: 0.85em;
    background-image: url('/img/overlays/estimados.jpg');
    padding-top: 350px;
    background-size: contain;
    background-repeat: no-repeat;
    left: 50%; /* Mueve el elemento hacia la derecha */
    transform: translateX(-50%); /* Ajusta el elemento hacia la izquierda */
}

#overlay-estimaciones0624 .overlay-content li {
    list-style: none;
    padding-left: 19px;
    background-size: 14px;
    background-repeat: no-repeat;
    background-position: 0px 3px;
}

#overlay-estimaciones0624 .overlay-content li.programado {
    background-image: url('/img/clock.png');
}

#overlay-estimaciones0624 .overlay-content li.estimado {
    background-image: url('/img/feed.png');
}

#overlay-estimaciones0624 .overlay-content li.actualizado {
    background-image: url('/img/feed-green.png');
}

#overlay-arroyolaguna0524 .overlay-content {
    top: 60px;
    width: 308px;
    background-color: #054a3dfa;
    font-size: 0.85em;
    background-image: url('/img/overlays/lineas-laguna-arroyo.jpg');
    padding-top: 350px;
    background-size: contain;
    background-repeat: no-repeat;
    left: 50%; /* Mueve el elemento hacia la derecha */
    transform: translateX(-50%); /* Ajusta el elemento hacia la izquierda */
}

#overlay-newnaming0424 .overlay-content {
    top: 60px;
    width: 308px;
    background-color: #054a3dfa;
    font-size: 0.85em;
    background-image: url('/img/renaming-overlay.jpg');
    padding-top: 350px;
    background-size: contain;
    background-repeat: no-repeat;
    left: 50%; /* Mueve el elemento hacia la derecha */
    transform: translateX(-50%); /* Ajusta el elemento hacia la izquierda */
}

#overlay-newmenu20240311 .arrow {
    top: -10px;
    left: 90%;
    transform: translateX(-50%);
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-bottom: 10px solid #629ade;
}

#overlay-newmenu20240311 .overlay-content {
    top: 55px;
    right: 4px;
}

#overlay-fixedstops0324 .overlay-content {
    top: 80px;
    margin-right: 17px;
    margin-left: 17px;
}

#overlay-fixedstops0324 .arrow {
    top: 145px;
    left: 10px;
    transform: translateX(-50%);
    border-top: 10px solid #629ade;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
}

/* Dark mode */
html.dark-mode body {
    background-color: #262626;
    color: #eeeeee;
}

.dark-mode h1 {
    background-image: url('/img/logo.png');
}

.dark-mode #formulario form {
    box-shadow: 0 2px 16px 0 rgba(41, 41, 48, 0.2);
    background-color: #323232;
}

.dark-mode #formulario form input {
    background-color: #323232;
    color: #eeeeee;
}

.dark-mode input#stopNumber {
    border-bottom: 1px solid #444;
    background: url('/img/location-white.png') no-repeat;
    background-size: 15px;
    background-position: 5px 9px;
}

.dark-mode input#lineNumber {
    background: url('/img/bus-white.png') no-repeat;
    background-size: 19px;
    background-position: 5px 9px;
}

.dark-mode #autocompleteResults, .dark-mode #lineSuggestions {
    background-color: #333;
}

.dark-mode #welcome-box {
    box-shadow: 0 8px 64px 0 rgba(12,12,14,.12);
    background: url("/img/welcome-logo-white.png") no-repeat #2d2d2d center 8px;
    background-size: 140px;
    border: 1px solid #404040BA !important;
}

.dark-mode .alert-box, .dark-mode #horarios-box, .dark-mode #nearestStopsResults {
    box-shadow: 0 8px 64px 0 rgba(12,12,14,.12);
    background: #2d2d2d;
}

.dark-mode #welcome-box h2, .dark-mode .alert-box h2, .dark-mode #horarios-box h2, .dark-mode #nearestStopsResults h2 {
    color: #eeeeee;
}

.dark-mode #welcome-box p, .dark-mode .alert-box p, .dark-mode  #horarios-box p, .dark-mode #nearestStopsResults p {
    color: #eeeeee;
}

.dark-mode .stop-block, .dark-mode .stopResult {
    background-color: #333 !important;
    color: #eeeeee;
    border: 1px solid #404040BA !important;
}

.dark-mode .highlight {
    background-color: #3b3d3d;
}

.dark-mode .line-info {
    border-top: 1px solid #404040;
}

.dark-mode .line-info h3 {
    box-shadow: 1px 1px 10px 0 rgba(12,12,14,.2),0 4px 8px 0 rgba(6, 6, 7, 0.12);
}

.dark-mode button#theme-toggle {
    background-color: #222;
}

.dark-mode .stop-block .mapIcon, .dark-mode .stopResult .mapIcon {
    background-image: url("/img/directions.png");
}  

.dark-mode button#removeAllButton {
    background: url('/img/trash-white.png') no-repeat #323232;
    background-size: 10px;
    background-position: 15px center;
    color: #b1b1b1;
}

.dialog {
    display: none;
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.4);
    z-index: 105;
    top: 0;
    left: 0;
}

.dialog-content { 
    background-color: #fefefe;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
    max-width: 500px;
    border-radius: 4px;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
}

.dialog h2 {
    margin-top: 0;
    color: #333;
    font-size: 1em;
}

.dialog input {
    width: 90%;
    padding: 10px;
    margin: 10px 0;
    border: 1px solid #ddd;
    border-radius: 4px;
}

.dialog-actions {
    text-align: right;
    margin-top: 20px;
}

.dialog button {
    padding: 10px 20px;
    margin-left: 10px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    text-transform: uppercase;
}

.dialog button:first-child {
    background-color: transparent;
    color: #333;
}

.dark-mode .dialog button:first-child {
    color: #ededed;
}

.dialog button:last-child {
    background-color: #ededed;
    color: #333;
}

.dark-mode .dialog-content {
    background-color: #333;
    color: #ededed;
}

.dark-mode .dialog h2 {
    color: #ededed;
}

.dark-mode .dialog input {
    background-color: #444;
    color: #fff;
    border-color: #555;
}
/* ... */

